...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/secondary_text"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_alert_item_resolve"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/alert_action_resolve"
...
